Most of KDE 4.5.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@72769 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdebase4-runtime/Portfile
+++ b/dports/kde/kdebase4-runtime/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdebase4-runtime
-version             4.4.5
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         Shared data needed by KDE4 programs
@@ -16,38 +16,31 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdebase-runtime-${version}
-checksums           sha1    93c58fbef37cdf0c9c6b37c773f8cde054fae51f \
-                    rmd160  4cc49e993e05adf4dfb4c5d4acdf992b5efbc114
+checksums           sha1    6fca681da218e910caff538c1520e44ec8430c9d \
+                    rmd160  f723ca34504604b46bd9d6083f827f666c3c32f5
 
 depends_lib-append  port:kdelibs4 \
                     port:qimageblitz \
                     port:oxygen-icons \
                     port:hicolor-icon-theme \
+                    port:exiv2 \
+                    port:openslp \
+                    port:redland \
+                    port:raptor \
+                    port:virtuoso \
                     port:bison
 
-configure.args-append   ../${distname} \
-                        -DWITH_PulseAudio=OFF \
+configure.args-append   -DWITH_PulseAudio=OFF \
                         -DXINE_INCLUDE_DIR=\"\" \
                         -DXINE_LIBRARY=\"\" \
-                        -DKDE4_DISABLE_MULTIMEDIA=ON
+                        -DWITH_ALSA=OFF \
+                        -DKDEBASE_DISABLE_MULTIMEDIA=ON
 
 variant xine description "Enable xine support" {
 # Unsupported. Don't report bugs, unless it comes with a patch :-)
     depends_lib-append      port:xine-lib
     configure.args-delete   -DXINE_INCLUDE_DIR=\"\" \
                             -DXINE_LIBRARY=\"\"
-}
-
-variant no_slp description {Remove SLP support in the network:/ kioslave} {
-    depends_lib-delete  port:openslp
-    patchfiles-append   patch-disable-slp.diff
-}
-
-variant no_nepomuk description {Disable building of the Nepomuk semantic desktop system} {
-    depends_lib-delete  port:redland (check for -bindings as well)
-    depends_lib-delete  port:raptor
-    depends_lib-delete  port:virtuoso
-    patchfiles-append   patch-disable-nepomuk.diff
 }
 
 post-destroot {
