--- a/dports/kde/kdebase4/Portfile
+++ b/dports/kde/kdebase4/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdebase4
-version             4.4.5
+version             4.5.2
 categories			kde kde4
 maintainers         snc sharky
 description         KDE4 applications and libraries from the base package
@@ -16,8 +16,8 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdebase-${version}
-checksums           sha1    c14f6da09f0d1624189c69ccc200c70f2763dcbc \
-                    rmd160  ce9c613beba768e94f9d4fbdc452aeae4fb9a070
+checksums           sha1    fb14022d7f47acc1cebce2da41d821945ec8de5c \
+                    rmd160  ad37ed1e515cbd54db09b2f6bb5896ea3c673c2f
 
 depends_lib-append  port:kdelibs4 \
                     port:qimageblitz \
@@ -25,8 +25,7 @@ depends_lib-append  port:kdelibs4 \
                     port:kdebase4-runtime
 
 
-configure.args-append   ../${distname} \
-                        -DWITH_XKB=OFF
+configure.args-append   -DWITH_XKB=OFF
 
 universal_variant   no
 
