--- a/dports/kde/kdeedu4/Portfile
+++ b/dports/kde/kdeedu4/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdeedu4
-version             4.4.5
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         Education based applications for the KDE4 platform
@@ -15,32 +15,21 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdeedu-${version}
-checksums           sha1    7b84fa9dd9e91e117df5dc1af19bcd212cac707a \
-                    rmd160  13c2ad8d67a961ab062bba989f7c86fa5e1cabc5
+checksums           sha1    44f6cbb0029ae23b0aa6e16e0e6125ad07771be4 \
+                    rmd160  25de7ca7b712f29f4c2466a224642c099ebb9fd3
 
 depends_lib-append  port:kdelibs4 port:kdebase4 \
                     port:ocaml port:openbabel \
+                    port:cfitsio port:libqalculate \
+                    port:gsl port:xplanet \
                     port:eigen port:gpsd
 
-variant cfitsio description {Gives KStars support for FITS images} {
-    depends_lib-append port:cfitsio
-}
+configure.args-append   ${qt_cmake_defines} -DBUILD_marble=OFF \
+                        -DWITH_Avogadro=OFF -DWITH_BoostPython=OFF \
+                        -DWITH_Libfacile=OFF -DBUILD_R=OFF
 
-variant qalculate description {Enable unit conversion support in Step} {
-    depends_lib-append port:libqalculate
-}
-
-variant gsl description {Enables GSL-powered features in Step} {
-    depends_lib-append port:gsl
-}
-
-variant xplanet description {Gives KStars support for xplanet} {
-    depends_lib-append port:xplanet
-}
 
 universal_variant   no
-
-configure.args-append   ../${distname}
 
 livecheck.url       http://mirrors.ibiblio.org/pub/mirrors/kde/stable/latest/src/
 livecheck.regex     kdeedu-(\\d+\\.\\d+\\.\\d+)${extract.suffix}
