--- a/dports/kde/kdegraphics4/Portfile
+++ b/dports/kde/kdegraphics4/Portfile
@@ -2,11 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdegraphics4
-version             4.4.5
-revision            3
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         KDE4 graphics applications
@@ -16,28 +15,18 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdegraphics-${version}
-checksums           sha1    9d878e917de53a0b70df7d1d9d9c57f771e4be72 \
-                    rmd160  f574b9b5f89b868ccab250093ef75ab8db7d4833
+checksums           sha1    e819cc1270023ae48669f488d11d24d7d1ca52c6 \
+                    rmd160  a2f425beeccc9bd3374d582ee92008a1f85ed17b
 
 depends_lib-append  port:kdebase4-runtime \
                     port:exiv2 port:poppler \
                     port:djvulibre port:chmlib \
                     port:libspectre port:qca \
-                    port:sane-backends
+                    port:sane-backends port:gphoto2
 
-patch.dir           ${workpath}/${distname}
-patchfiles          patch-gwenview-lib-document-view-videoviewadapter.cpp.patch \
-                    patch-okular-core-audioplayer.cpp.patch
-
-set qca_dir         ${prefix}/libexec/qt4-mac
-
-configure.args-append   ../${distname} \
+configure.args-append   -DQCA2_LIBRARIES=${prefix}/lib/libqca.2.dylib \
+                        -DQCA2_INCLUDE_DIR=${prefix}/include/QtCrypto \
                         -DGWENVIEW_SEMANTICINFO_BACKEND=None
-configure.pkg_config_path-append ${qt_dir}/lib/pkgconfig
-
-variant gphoto2 description {Required to build the kamera project} {
-    depends_lib-append port:gphoto2
-}
 
 universal_variant   no
 
