--- a/dports/kde/kdelibs4/Portfile
+++ b/dports/kde/kdelibs4/Portfile
@@ -2,11 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdelibs4
-version             4.4.5
-revision            2
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         KDE4 core libraries
@@ -16,8 +15,8 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdelibs-${version}
-checksums           sha1    73e37abee48536b85782d1a17f1b282313b16c4d \
-                    rmd160  533a627116524d5365ba45f5eb17c972426f59c1
+checksums           sha1    e5b3c643aa10275571be6a637333e8791ed013b6 \
+                    rmd160  9d8830a0f9b9062ead1d18918da0ce25d24f5cbe
 
 depends_build-append port:flex port:gmake
 
@@ -36,6 +35,8 @@ depends_lib-append  \
                     port:aspell port:aspell-dict-en \
                     port:attica port:liblzma \
                     port:avahi \
+                    port:dbusmenu-qt port:docbook-xml \
+                    port:docbook-xsl \
                     port:shared-desktop-ontologies
 
 conflicts           kdelibs3
@@ -50,13 +51,13 @@ patch.dir           ${workpath}/${distname}
 patch.pre_args      -p1
 
 
-configure.args-append   ../${distname} \
-                        -DWITH_ENCHANT=ON \
+configure.args-append   -DWITH_ENCHANT=ON \
                         -DWITH_Soprano=ON \
                         -DWITH_Avahi=ON \
                         -DKDE_DEFAULT_HOME=Library/Preferences/KDE \
                         -DWITH_HSPELL:BOOL=OFF \
-                        -DPHONON_INCLUDE_DIR=${prefix}/libexec/qt4-mac/lib/phonon.framework/ \
+                        -DDOCBOOKXSL_DIR=${prefix}/share/xml/ \
+                        ${qt_cmake_defines} \
                         -DLIBXSLT_INCLUDE_DIR=${prefix}/include/ \
                         -DLIBXSLT_LIBRARIES=${prefix}/lib/libxslt.dylib \
                         -DLIBEXSLT_LIBRARIES=${prefix}/lib/libexslt.dylib \
@@ -75,22 +76,6 @@ get support for spell checking other languages.
 The command 'port search aspell-dict' will show
 you the currently available dictionary options.
 "
-}
-
-variant no_avahi description {Disables KDE applications' access to multicast DNS/DNS-SD service discovery} {
-    depends_lib-delete  port:avahi
-    configure.args-delete   -DWITH_Avahi=ON
-    configure.args-append   -DWITH_Avahi=OFF
-}
-
-variant no_shared_desktop_ontologies description {Remove ontologies necessary for the Nepomuk semantic desktop} {
-    depends_lib-delete  port:shared-desktop-ontologies
-    patchfiles-append   patch-disable-shared-desktop-ontologies.diff
-}
-
-variant no_xz description {Remove the ability to read and write xz compressed data files} {
-    depends_lib-delete  port:liblzma
-    patchfiles-append   patch-disable-liblzma.diff
 }
 
 universal_variant   no
