--- a/dports/kde/kdemultimedia4/Portfile
+++ b/dports/kde/kdemultimedia4/Portfile
@@ -2,11 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdemultimedia4
 conflicts           kdelibs4-experimental
-version             4.4.5
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         KDE4 multimedia applications
@@ -16,8 +16,8 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdemultimedia-${version}
-checksums           sha1    5d0e87d317fc8c4424a3b0cefe2f2f18c53f7038 \
-                    rmd160  d142b5b4a931138cc0ad301c4bce9267d239351e
+checksums           sha1    457701505639cac9b5f3f1781a483a6ac35c7eba \
+                    rmd160  aee9ad1afd2b71489d63e2351afc344479b12687
 
 depends_lib-append  port:kdebase4-runtime \
                     port:cdparanoia \
@@ -25,8 +25,7 @@ depends_lib-append  port:kdebase4-runtime \
                     port:libvorbis \
                     port:taglib
 
-configure.args-append   ../${distname} \
-                        -DBUILD_dragonplayer=ON \
+configure.args-append   -DBUILD_dragonplayer=ON \
                         -DBUILD_juk=ON \
                         -DBUILD_kmix=OFF \
                         -DWITH_Taglib=ON \
