--- a/dports/kde/kdenetwork4/Portfile
+++ b/dports/kde/kdenetwork4/Portfile
@@ -2,11 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdenetwork4
-version             4.4.5
-revision            1
+version             4.5.2
 categories          kde kde4 network
 maintainers         snc sharky
 description         KDE4 networking applications
@@ -17,45 +16,23 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src
 use_bzip2           yes
 distname            kdenetwork-${version}
-checksums           sha1    5f321ce932d6b1fadf1935e527bd1848c317be7a \
-                    rmd160  5cf43ba3e1b772a0fe1306f9553d5ad9cfa40a8b
+checksums           sha1    9ae99ef21bb56e254f1cab22338b597e7734e734 \
+                    rmd160  500ef5ce18fee0db62eb62bf6661c506bd597a81
 
 depends_lib-append  port:kdebase4-runtime \
                     port:meanwhile \
+                    port:kdepimlibs4 \
+                    port:libtelepathy \
                     port:qca \
                     path:lib/libspeex.dylib:speex \
-                    port:libidn \
-                    port:kdepimlibs4 \
-                    port:libotr
+                    port:libotr \
+                    port:xmms \
+                    port:libmsn \
+                    port:libidn
 depends_run-append  port:qca-ossl
 
-post-extract {
-    # change #include <Phonon...> to <phonon...> in all files that
-    # contain that header.
-    foreach item [exec grep -lr "Phonon" ${workpath}/${distname}] {
-        reinplace "/#include/s@Phonon@phonon@" ${item}
-    }
-}
-
-configure.args-append   ../${distname}
-configure.pkg_config_path-append ${qt_dir}/lib/pkgconfig
-
-variant no_kopete conflicts libmsn xmms description "Do not install Kopete instant messaging client" {
-    depends_lib-delete      port:qca \
-                            path:lib/libspeex.dylib:speex \
-                            port:libotr \
-                            port:libidn
-    depends_run-delete      port:qca-ossl
-    configure.args-append   -DBUILD_kopete=OFF
-}
-
-variant xmms conflicts no_kopete description {Used by the Kopete nowlistening plugin to support the XMMS player} {
-    depends_lib-append port:xmms
-}
-
-variant libmsn conflicts no_kopete description {Required for the Kopete wlm plugin} {
-    depends_lib-append port:libmsn
-}
+configure.args-append   -DQCA2_LIBRARIES=${prefix}/lib/libqca.2.dylib \
+                        -DQCA2_INCLUDE_DIR=${prefix}/include/QtCrypto
 
 universal_variant   no
 
