--- a/dports/kde/kdepimlibs4/Portfile
+++ b/dports/kde/kdepimlibs4/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdepimlibs4
-version             4.4.5
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         KDE4 core PIM libraries
@@ -15,8 +15,8 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdepimlibs-${version}
-checksums           sha1    bc4d9a478f80e013ac39710f963ee68961d5f369 \
-                    rmd160  3ba96ac29e151e7bcebe90394535d82345102346
+checksums           sha1    5b611f75165201f49a9f6dfb42b75c5e73db0ff9 \
+                    rmd160  75f45dd6139be85101d5e696ff855f7c95512132
 
 depends_lib-append  port:kdelibs4 \
                     port:akonadi \
@@ -25,8 +25,7 @@ depends_lib-append  port:kdelibs4 \
                     port:openldap \
                     port:gpgme
 
-configure.args-append   ../${distname} \
-                    -DLIBICALSS_LIBRARY=${prefix}/lib/libicalss.dylib \
+configure.args-append   -DLIBICALSS_LIBRARY=${prefix}/lib/libicalss.dylib \
                     -DLIBICAL_INCLUDE_DIRS=${prefix}/include/ \
                     -DLIBICAL_LIBRARY=${prefix}/lib/libical.dylib
 
