--- a/dports/kde/kdesdk4/Portfile
+++ b/dports/kde/kdesdk4/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdesdk4
-version             4.4.5
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         Utilities to ease development with the KDE4 platform
@@ -15,12 +15,14 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdesdk-${version}
-checksums           sha1    f1e0bebde061d7eec994820f1c77d697efaca024 \
-                    rmd160  eb4849aef699d6c64b59a475ee269bc6fee06e78
+checksums           sha1    8732dd0460e17bfdcfe6b9be467a90de14143cc1 \
+                    rmd160  c594ea89867ab99f9bacd20e29892ccdefbefac4
 
 depends_lib-append  port:kdelibs4 port:kdebase4-runtime
 
-configure.args-append   ../${distname} -DWITH_Boost:BOOL=OFF
+configure.args-append   -DWITH_Boost:BOOL=OFF
+
+default_variants +boost
 
 variant boost description {Required to build Umbrello} {
     depends_lib-append  port:boost
