--- a/dports/kde/kdeutils4/Portfile
+++ b/dports/kde/kdeutils4/Portfile
@@ -2,11 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdeutils4
-version             4.4.5
-revision            1
+version             4.5.2
 conflicts           kdelibs4-experimental
 categories          kde kde4
 maintainers         snc sharky
@@ -17,33 +16,19 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdeutils-${version}
-checksums           sha1    c092cfbb46719d89a5718735dc81ca75c0176e45 \
-                    rmd160  d8f9014fcd27548a33d10138135a8789d8fd49d6
+checksums           sha1    87e0124d8895d9dbabfa7b85b65c32d4f07a7408 \
+                    rmd160  c4b2fdff8b5db4e66e6d0b1e3e2d9bc4e63dda11
 
-depends_lib-append  port:kdelibs4 port:kdepimlibs4 port:kdebase4-runtime \
-                    port:libzip port:gmp port:libarchive \
-                    port:qca port:qimageblitz
+depends_lib-append  port:kdelibs4 port:kdebase4-runtime \
+                    port:qca port:qimageblitz port:gmp \
+                    port:mercurial port:git-core \
+                    port:libzip port:libarchive
 
 patch.dir           ${workpath}/${distname}
 
-variant no_qca description {Disable most of the algorithms of the checksum tool in Okteta} {
-    depends_lib-delete  port:qca
-    patchfiles-append   patch-disable-qca2.diff
-}
-
-variant no_qimageblitz description {Disable building of SuperKaramba} {
-    depends_lib-delete  port:qimageblitz
-    patchfiles-append   patch-disable-qimageblitz.diff
-}
-
-variant no_gmp description {Diable building of KCalc} {
-    depends_lib-delete  port:gmp
-    patchfiles-append   patch-disable-gmp.diff
-}
+configure.args-append   -DWITH_SIP=OFF -DKDE4Workspace_DIR=""
 
 universal_variant   no
-
-configure.args-append	../${distname}
 
 livecheck.url       http://mirrors.ibiblio.org/pub/mirrors/kde/stable/latest/src/
 livecheck.regex     kdeutils-(\\d+\\.\\d+\\.\\d+)${extract.suffix}
