--- a/dports/kde/konversation/Portfile
+++ b/dports/kde/konversation/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4 1.0
+PortGroup           kde4 1.1
 
 name                konversation
 version             1.3.1
+revision            1
 categories          kde kde4
 maintainers         snc sharky
 description         KDE IRC client.
@@ -23,5 +24,3 @@ checksums           sha1    dd3e1436b769cf11218859b851a0c9b9623dbb12 \
 patchfiles          workaround-qfontmetrics-bug.patch
 patch.dir           ${workpath}/${distname}
 patch.pre_args      -p1
-
-configure.args-append   ../${distname} -DPHONON_INCLUDE_DIR=${prefix}/libexec/qt4-mac/lib/phonon.framework/
