--- a/dports/kde/kdebase4-workspace/Portfile
+++ b/dports/kde/kdebase4-workspace/Portfile
@@ -1,12 +1,12 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdebase4-workspace
-version             4.2.4
+version             4.5.2
 categories          kde kde4
-maintainers         nomaintainer
+maintainers         snc openmaintainer
 description         Shared data needed by KDE4 programs
 long_description    Provides data which is required by KDE4 applications. \
                     e.g. icons and mimetype data.
@@ -15,11 +15,13 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdebase-workspace-${version}
-checksums           md5     72f90e1a61d94a5f66c0b3ce39b7b279
 
 depends_lib-append  port:kdebase4-runtime \
                     port:qimageblitz \
+                    port:libqalculate \
+                    port:xmms \
                     port:kdepimlibs4
 
-configure.args-append   ../${distname}
+checksums           sha1    0a2ef4f3391e94371481226374c609fb52587243 \
+                    rmd160  00ab2b2b4296f489830505cabdfffb5ea8768843
 
