--- a/dports/kde/kdegames4/Portfile
+++ b/dports/kde/kdegames4/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4   1.0
+PortGroup           kde4   1.1
 
 name                kdegames4
-version             4.4.5
+version             4.5.2
 categories          kde kde4
 maintainers         snc sharky
 description         A variety of games made with the KDE4 development platform
@@ -15,13 +15,11 @@ homepage            http://www.kde.org
 master_sites        kde:stable/${version}/src/
 use_bzip2           yes
 distname            kdegames-${version}
-checksums           sha1    2e0d86c3bf668f4e1fdb2b0da74545f442799700 \
-                    rmd160  c9448c6b4875353a9205407f6419b62a8158758e
+checksums           sha1    57414f18b5a3958d6661f36c48d2727d10ccb31f \
+                    rmd160  cd379cfd0a1d3862edffa52c8d5283af4ce64703
 
 depends_lib-append  port:kdelibs4 port:kdebase4-runtime \
-                    port:ggz-client-libs
-
-configure.args-append   ../${distname}
+                    port:ggz-client-libs port:py26-twisted
 
 universal_variant   no
 
