--- a/dports/audio/liblastfm/Portfile
+++ b/dports/audio/liblastfm/Portfile
@@ -34,14 +34,16 @@ post-configure {
     # create Makefile's, then patch them to remove a flaw made by qmake.
     # (1) find subdir Makefile names from top-level Makefile, and have
     # 'make' create each in turn.
-    foreach tMf [exec grep -e "Makefile\[\^ \]\*:" ${worksrcpath}/Makefile | \
+    foreach fixfile [exec grep -e "Makefile\[\^ \]\*:" \
+                         ${worksrcpath}/Makefile | \
                      sed -e "s@\\(\[^ \]*/Makefile\[^ \]*\\):\[^ \]*@\\1@g"] {
-        system "cd ${worksrcpath} && PATH=${qtdir}/bin:$env(PATH) make ${tMf}"
+        system "cd ${worksrcpath} && PATH=${qt_dir}/bin:$env(PATH) \
+                    make ${fixfile}"
     }
 
     # (2) find all created Makefile*'s, and reinplace the offending flaw
-    foreach tMf [exec find ${worksrcpath} -name "Makefile*"] {
-        reinplace "s@\\(-arch \[^ \]*\\) -arch@\\1@" ${tMf}
+    foreach fixfile [exec find ${worksrcpath} -name "Makefile*"] {
+        reinplace "s@\\(-arch \[^ \]*\\) -arch@\\1@" ${fixfile}
     }
 }
 
