python31, python32: bring back gettext dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@72776 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/python32/Portfile
+++ b/dports/lang/python32/Portfile
@@ -41,7 +41,7 @@ if {![variant_isset universal]} {
 
 depends_lib             port:zlib port:openssl port:tk \
                         port:sqlite3 port:ncurses port:gdbm \
-                        port:bzip2 port:readline
+                        port:bzip2 port:readline port:gettext
 
 configure.args          --enable-framework=${frameworks_dir} \
                         --enable-ipv6 \
