--- a/dports/gnome/ggv/Portfile
+++ b/dports/gnome/ggv/Portfile
@@ -21,6 +21,7 @@ master_sites    gnome:sources/${name}/${branch}/
 use_bzip2	yes
 checksums	md5 418f0ef3f8b82bb0c423a2a1cf6769f7 \
 			sha1 571704d11e9ffce8413ee53936b314de06147c56
+depends_build	port:intltool port:pkgconfig
 depends_lib	port:ghostscript port:libgnomeprintui port:libgnomeui
 configure.cppflags-append "-L${prefix}/lib"
 
