update librsvg to 2.32.0 the older version was incompatible with gdk-pixbuf > 2.21.3 because it installed some of its libraries in lib/gtk-2.0/2.10.0/loaders instead of lib/gdk-pixbuf-2.0/2.10.0/loaders hence was not found by gdk-pixbuf. a simple test with py26-gtk installed is python -c "import gtk;print gtk.gdk.pixbuf_get_formats()" | grep svg which should output a line
git-svn-id: https://svn.macports.org/repository/macports/trunk@72779 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/librsvg/Portfile
+++ b/dports/graphics/librsvg/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 PortGroup       archcheck 1.0
 
 name            librsvg
-version         2.26.3
+version         2.32.0
 license         GPL-2 LGPL-2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      graphics gnome
@@ -20,9 +20,9 @@ homepage        http://librsvg.sourceforge.net/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2       yes
 
-checksums       md5     8df68c2c02cdf2a96a92b43bf737bf9c \
-                sha1    ef0063eaa9e638364cc8ff142aadef8a267b7af5 \
-                rmd160  14f51ae7997d8137e618ee117ef7980fc0ffe52c
+checksums           md5     b015a9bd80143ec876af489d882dc28b \
+                    sha1    252727b948a29b36dae0022e0c620538bcb158f8 \
+                    rmd160  9d89f333544d8eb66698c94602ea93ac3ba01157
 
 depends_build   port:pkgconfig
 
@@ -51,8 +51,6 @@ archcheck.files \
     lib/libpango-1.0.dylib \
     lib/libxml2.dylib
 
-configure.args --disable-mozilla-plugin
-
 post-destroot {
     set python.branch 2.6
     set python.bin ${frameworks_dir}/Python.framework/Versions/${python.branch}/bin/python${python.branch}
@@ -67,7 +65,7 @@ post-destroot {
 
 post-activate {
     ui_debug "Updating gdk-pixbuf.loaders..."
-    system "gdk-pixbuf-query-loaders >${prefix}/etc/gtk-2.0/gdk-pixbuf.loaders"
+    system "gdk-pixbuf-query-loaders --update-cache"
 }
 
 livecheck.type  regex
