qjson: use KDE4-1.1 PortGroup
git-svn-id: https://svn.macports.org/repository/macports/trunk@72780 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/qjson/Portfile
+++ b/dports/devel/qjson/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4 1.0
+PortGroup           kde4 1.1
 
 name                qjson
 version             0.7.1
+revision            1
 categories          devel kde4 kde
 maintainers         snc openmaintainer
 description         map JSON data to QVariant objects
