root: addresses ticket #26984. Move qt4 portgroup inclusion to the main level from inside variant.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72782 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/root/Portfile
+++ b/dports/science/root/Portfile
@@ -178,8 +178,11 @@ variant qt_x11 conflicts qt_mac description {Builds port with Qt support via X11
     depends_lib-append      port:qt4-x11
 }
 
-variant qt_mac conflicts qt_x11 description {Builds port with Qt support via Mac UI} {
+if {[variant_isset qt_mac]} {
     PortGroup qt4 1.0
+}
+
+variant qt_mac conflicts qt_x11 description {Builds port with Qt support via Mac UI} {
     post-patch {
         # fix where "qglobal.h" is found in all files that use or reference it
         foreach tpf { configure graf2d/qt/src/TGQt.cxx } {
