py2[5-6]-igraph: stealth update, #27012
git-svn-id: https://svn.macports.org/repository/macports/trunk@72786 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-igraph/Portfile
+++ b/dports/python/py26-igraph/Portfile
@@ -17,10 +17,9 @@ homepage            http://pypi.python.org/pypi/python-igraph/
 master_sites        http://pypi.python.org/packages/source/p/python-igraph/
 
 distname            python-igraph-${version}
-
-checksums           md5     665e40032c7ea95d1279bd49afd8d213 \
-                    sha1    2d54398279b8fb74ecaf204fc6fba12115335e08 \
-                    rmd160  337d4809ffe7fcd5480e972f2f4236aa2affffd1
+dist_subdir         python/${distname}/1/
+checksums           md5     c80941cc28cd723333c886e725f70506 \
+                    sha1    ed9ebdb1dd29795df95b398937ef9ba173413979
 
 platforms           darwin
 
