--- a/dports/math/R/Portfile
+++ b/dports/math/R/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name             R
-version          2.11.1
-revision         2
+version          2.12.0
 categories       math science
 maintainers      epfl.ch:kjell.konis
 platforms        darwin
@@ -25,9 +24,9 @@ master_sites     http://cran.us.r-project.org/src/base/R-2/ \
                  http://cran.hu.r-project.org/src/base/R-2/ \
                  http://cran.r-project.org/src/base/R-2/
 
-checksums        md5     7421108ade3e9223263394b9bbe277ce \
-                 sha1    0b36780627f3cc5cea3f41e0b717ed7ee92ba086 \
-                 rmd160  a5223a3f784ad0f808d893d82a4e0a130c9a9b3a
+checksums        md5     aa003654d238d70bf5bc7433b8257aac \
+                 sha1    07b90a728e36585742603beccdee30b6864ef5af \
+                 rmd160  e10511bc360284d3876b147a0351b662d80d22a4
 
 depends_lib      port:gettext \
                  port:icu \
@@ -49,24 +48,29 @@ variant recommended description {Install recommended R packages} {
     configure.args-append --with-recommended-packages
 }
 
-variant gcc42 conflicts gcc43 gcc44 description {Build with gcc42} {
+variant gcc42 conflicts gcc43 gcc44 gcc45 description {Build with gcc42} {
     configure.compiler macports-gcc-4.2
     depends_lib-append port:gcc42
 }
 
-variant gcc43 conflicts gcc42 gcc44 description {Build with gcc43} {
+variant gcc43 conflicts gcc42 gcc44 gcc45 description {Build with gcc43} {
     configure.compiler macports-gcc-4.3
     depends_lib-append port:gcc43
 }
 
-variant gcc44 conflicts gcc42 gcc43 description {Build with gcc44} {
+variant gcc44 conflicts gcc42 gcc43 gcc45 description {Build with gcc44} {
     configure.compiler macports-gcc-4.4
     depends_lib-append port:gcc44
 }
 
+variant gcc45 conflicts gcc42 gcc43 gcc44 description {Build with gcc45} {
+    configure.compiler macports-gcc-4.5
+    depends_lib-append port:gcc45
+}
+
 default_variants +recommended
 
-if {![variant_isset gcc42] && ![variant_isset gcc43] && ![variant_isset gcc44]} {
+if {![variant_isset gcc42] && ![variant_isset gcc43] && ![variant_isset gcc44] && ![variant_isset gcc45]} {
     default_variants-append +gcc44
 }
 
@@ -103,11 +107,6 @@ post-destroot {
   foreach v { "rhome" "rincludedir" } {
     reinplace "s|${v}=${destroot}|${v}=|" "${destroot}${prefix}/lib/pkgconfig/libR.pc"
   }
-
-  reinplace "s|rlibdir=\$\{rhome\}/lib|rlibdir=\$\{rhome\}/lib/${build_arch}|" \
-            "${destroot}${prefix}/lib/pkgconfig/libR.pc"
-  reinplace "s|Cflags: -I\$\{rincludedir\}|Cflags: -I\$\{rincludedir\} -I\$\{rincludedir\}/${build_arch}|" \
-            "${destroot}${prefix}/lib/pkgconfig/libR.pc"
 
   foreach dylib [ exec find ${destroot}${prefix}/lib/R/lib/${build_arch} -name "\*.dylib" ] {
     regsub ":$" ${dylib} "" destroot_dylib_path
