p5-cgi-ajax: update to 0.707; see #27018
git-svn-id: https://svn.macports.org/repository/macports/trunk@72790 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-cgi-ajax/Portfile
+++ b/dports/perl/p5-cgi-ajax/Portfile
@@ -1,14 +1,29 @@
 # $Id$
+
 PortSystem              1.0
 PortGroup               perl5 1.0
 
-perl5.setup             CGI-Ajax 0.701
+perl5.setup             CGI-Ajax 0.707
 maintainers             nomaintainer
 categories-append       www
+
 description             A module for writing AJAX/DHTML-based web apps
-long_description        ${description}
-homepage                http://search.cpan.org/~bct/www.perljax.us
-checksums               md5 e4922d9ea9e45c68387d3682a7adbacf
+
+long_description        CGI::Ajax is an object-oriented module that provides \
+                        a unique mechanism for using Perl code \
+                        asynchronously from JavaScript-enhanced HTML pages. \
+                        CGI::Ajax unburdens the user from having to write \
+                        extensive JavaScript, except for associating an \
+                        exported method with a document-defined event (such \
+                        as onClick, onKeyUp, etc). CGI::Ajax also mixes well \
+                        with HTML containing more complex JavaScript.
+
+checksums               md5     6efcb38dd86bbff3779adc9315cfa7d6 \
+                        sha1    353373964fb1fc770780ff183cdedc594bb24e4e \
+                        rmd160  66061a053e2eedba35d491cacd314b3733cfd7fa
+
+depends_lib-append      port:p5-class-accessor
+
 platforms               darwin
 
 supported_archs noarch
