p5-crypt-twofish: update to 2.14; see #27019
git-svn-id: https://svn.macports.org/repository/macports/trunk@72791 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-crypt-twofish/Portfile
+++ b/dports/perl/p5-crypt-twofish/Portfile
@@ -2,7 +2,8 @@
 
 PortSystem	1.0
 PortGroup	perl5 1.0
-perl5.setup	Crypt-Twofish 2.12
+
+perl5.setup	Crypt-Twofish 2.14
 maintainers	nomaintainer
 description	Implementation of the twofish-crypto algorithm for perl
 long_description	Twofish is a 128-bit symmetric block cipher with a \
@@ -11,4 +12,6 @@ long_description	Twofish is a 128-bit symmetric block cipher with a \
 			all uses, as described at \
 			<URL:http://www.counterpane.com/twofish.html>.
 platforms	darwin
-checksums	md5 39937a00e4d5e6a5d700d1cd9991517c
+
+checksums               sha1    baed59fe8ddf0626b7f0f7eca7bbacc74bb041bf \
+                        rmd160  3c80e5cc86993f65f2e8869dddc283a3f7a23766
