qt4-mac: fix Tiger's inability to find libraries when building with an SDK
git-svn-id: https://svn.macports.org/repository/macports/trunk@72792 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt4-mac/Portfile
+++ b/dports/aqua/qt4-mac/Portfile
@@ -196,6 +196,7 @@ pre-configure {
 platform darwin 8 {
     # build as Carbon only, not cocoa.
     configure.args-append -carbon
+    configure.ldflags-append -lcrypto -ldbus-1 -ljpeg -llcms -lsqlite3 -lssl -lz
     post-configure {
         fs-traverse item ${worksrcpath} {
             if {"Makefile" == [file tail ${item}]} {
