coreutils: Address a possible build failure by pulling in a patch from upstream
git-svn-id: https://svn.macports.org/repository/macports/trunk@72793 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/coreutils/Portfile
+++ b/dports/sysutils/coreutils/Portfile
@@ -31,6 +31,12 @@ depends_lib \
     port:gmp \
     port:libiconv
 
+patchfiles stpncpy.patch
+patch.pre_args -p1
+
+use_autoreconf yes
+autoreconf.args -fvi
+
 configure.args  --program-prefix=g
 
 post-destroot {
