--- a/dports/net/squid3-devel/Portfile
+++ b/dports/net/squid3-devel/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name            squid3-devel
-version         3.1.8
+version         3.2.0.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      net
 platforms       darwin
@@ -31,35 +31,36 @@ master_sites    http://mirrors.24-7-solutions.net/pub/squid/ \
                 ftp://ftp.squid-cache.org/pub/squid/
 
 distname        squid-${version}
-checksums           md5     a8160dfba55ab7c400c622b72d39fc13 \
-                    sha1    7106c18c8f79d1710955c06745092daca856161d
+checksums           md5     1f5cfc4aef8fe0926532100277b044f2 \
+                    sha1    44b5510755a1f4a7ab92a7b0e9182ebc6cbc0096
 
 use_bzip2       yes
-patchfiles      patch-cf.data.pre.diff patch-include_squid_types.h.diff
+patchfiles      patch-cf.data.pre.diff
 
 depends_lib     port:openssl port:zlib
 
 conflicts       squid squid3
 
-configure.args  --with-pthreads \
-                --enable-shared \
-                --mandir=${prefix}/share/man \
-                --sysconfdir=${prefix}/etc/squid \
-                --datadir=${prefix}/share/squid \
-                --localstatedir=${prefix}/var/squid \
-                --with-openssl=${prefix} \
-                --enable-delay-pools \
-                --enable-removal-policies \
-                --enable-storeio=ufs,aufs,diskd \
-                --enable-disk-io=AIO,Blocking,DiskDaemon,DiskThreads \
-                --enable-icap-client \
-                --with-default-user=squid \
-                --disable-ipv6
-post-configure {
-    if {[variant_isset universal]} {
-        system "cd ${worksrcpath} && ed - ${worksrcpath}/include/autoconf.h < ${filespath}/include_autoconf.h.ed && touch include/stamp-h1"
-    }
-}
+#configure.args
+#--with-pthreads \
+#                --enable-shared \
+#                --mandir=${prefix}/share/man \
+#                --sysconfdir=${prefix}/etc/squid \
+#                --datadir=${prefix}/share/squid \
+#                --localstatedir=${prefix}/var/squid \
+#                --with-openssl=${prefix} \
+#                --enable-delay-pools \
+#                --enable-removal-policies \
+#                --enable-storeio=ufs,aufs,diskd \
+#                --enable-disk-io=AIO,Blocking,DiskDaemon,DiskThreads \
+#                --enable-icap-client \
+#                --with-default-user=squid \
+#                --disable-ipv6
+#post-configure {
+#    if {[variant_isset universal]} {
+#        system "cd ${worksrcpath} && ed - ${worksrcpath}/include/autoconf.h < ${filespath}/include_autoconf.h.ed && touch include/stamp-h1"
+#    }
+#}
 
 build.args      DEFAULT_PID_FILE=${prefix}/var/run/squid/squid.pid
 use_parallel_build  yes
