update port to version 0.9.1a
git-svn-id: https://svn.macports.org/repository/macports/trunk@72800 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/griffon/Portfile
+++ b/dports/devel/griffon/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                griffon
-version             0.9
+version             0.9.1a
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          devel java
 maintainers         breskeby
@@ -23,9 +23,9 @@ conflicts			griffon-devel
 distname            ${name}-${version}-bin
 master_sites        http://dist.codehaus.org/griffon/griffon/${branch}.x
 
-checksums           md5 9313e3bf871f656986bf4a1c86745dca \
-                    sha1 e09dd7e8154b3c75aad0f706c4e8e3b7733525d6 \
-                    rmd160 2e0900dfae481379cf7e0aa8a6f0ca351e094a56
+checksums           md5 f2827fd3a1d44a7773bb8985e47d4080 \
+                    sha1 36de60215336acada805ceb918eb3dfc7c2b6fb0 \
+                    rmd160 f39ef8a7df4e92a36f1697494479fa10c9dc986b
 
 worksrcdir          ${name}-${version}
 set workTarget      ""
