--- a/dports/gnome/py26-gtkhtml2/Portfile
+++ b/dports/gnome/py26-gtkhtml2/Portfile
@@ -3,7 +3,7 @@
 
 PortSystem          1.0
 
-name                gnome-python26-extras
+name                py26-gtkhtml2
 version             2.25.3
 
 categories          gnome python
@@ -11,9 +11,7 @@ platforms           darwin
 maintainers         elelay
 
 description         "Extra" Python modules for some GNOME Desktop libraries.
-long_description    ${description}\
-					egg-recent, gksu, gksu2, gksui, gtkmozembed are not built.\
-					File a bug if you need them.
+long_description    ${description}
 
 homepage            http://www.pygtk.org/
 
@@ -30,15 +28,12 @@ checksums           md5     9f3b7ec5c57130b96061cb486b79c076 \
 
 use_bzip2           yes
 
-depends_lib         port:py26-eggtrayicon \
-                    port:py26-gdl \
-                    port:py26-gda \
-                    port:py26-gtkhtml2 \
-                    port:py26-gtkspell
+depends_lib         port:py26-gtk\
+					port:libgtkhtml
 
 patchfiles          patch-configure.diff
 
-configure.args-append		 --disable-allbindings
+configure.args-append   --disable-allbindings --enable-gtkhtml2
 
 set python.branch   2.6
 set python.prefix   ${frameworks_dir}/Python.framework/Versions/${python.branch}
@@ -48,7 +43,18 @@ configure.args-append       --prefix=${python.prefix}
 configure.pkg_config_path   ${python.prefix}/lib/pkgconfig
 
 configure.python        ${python.bin}
-configure.env-append    PYGTK_CODEGEN=${frameworks_dir}/Python.framework/Versions/2.6/bin/pygobject-codegen-2.0
+configure.env-append    PYGTK_CODEGEN=${python.prefix}/bin/pygobject-codegen-2.0
+
+post-destroot {
+	file delete "${destroot}/${python.prefix}/lib/pkgconfig/gnome-python-extras-2.0.pc"
+}
+
+platform darwin 9 {
+    post-patch {
+        reinplace "s|-export-symbols-regex.*||g" \
+            ${worksrcpath}/gtkhtml2/Makefile.in \
+    }
+}
 
 livecheck.type      regex
 livecheck.url       http://ftp.gnome.org/pub/gnome/sources/${myname}/${branch}/
