glade3:   * for compatibility with the other GNOME ports, remove +python25 +python26 variants   * configure properly for python26, increment revision   * disable broken +quartz variant until issues with ige_mac_integration are resolved (#23356)   * skip arch check for devhelp to allow port to build +universal (runtime dep only)   * conflicts glade3-devel
git-svn-id: https://svn.macports.org/repository/macports/trunk@72803 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/glade3/Portfile
+++ b/dports/devel/glade3/Portfile
@@ -4,8 +4,9 @@
 PortSystem 1.0
 
 name            glade3
+conflicts       glade3-devel
 version         3.6.7
-revision        1
+revision        2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Glade is a free user interface builder for GTK+ and GNOME.
 long_description    Glade is a free user interface builder for GTK+ \
@@ -23,47 +24,43 @@ checksums       md5     0fbe06e4babb2adeaf9725577ff43395 \
                 sha1    7621d5ae486ed42c35bb1d147b5693428481e733 \
                 rmd160  ab8487a8914b31ba2cb22bf0261b6ad39b0d1629
 
+depends_skip_archcheck devhelp
+
 depends_build   port:pkgconfig \
                 port:intltool \
                 port:gnome-doc-utils \
                 port:gtk-doc
 
-depends_lib     port:gtk2 \
+depends_lib     port:py26-gtk \
                 port:libxml2 \
                 port:libgnomeui
 
 depends_run     port:hicolor-icon-theme \
                 port:devhelp
 
+patchfiles      patch-configure.diff
+
 configure.args  --disable-scrollkeeper
 
-post-activate   {
-        system "scrollkeeper-update"
-}
+set python_prefix         ${frameworks_dir}/Python.framework/Versions/2.6
+configure.python          ${prefix}/bin/python2.6
+configure.pkg_config_path ${python_prefix}/lib/pkgconfig
 
 variant disable_gnome description {Disable support for GNOME UI widgets} {
         configure.args-append --disable-gnome
         depends_lib-delete port:libgnomeui
 }
 
-variant quartz {
-         depends_lib-append port:ige-mac-integration
-         depends_run-delete port:devhelp
-}
+#
+# ige-mac-integration is broken
+#
+# disable quartz variant until this is resolved
+#
 
-variant python25 conflicts python26 description {Use Python 2.5} {
-        depends_lib-append port:py25-gtk
-        configure.python ${prefix}/bin/python2.5
-}
-
-variant python26 conflicts python25 description {Use Python 2.6} {
-        depends_lib-append port:py26-gtk
-        configure.python ${prefix}/bin/python2.6
-}
-
-if {![variant_isset python25]} {
-    default_variants +python26
-}
+#variant quartz {
+#         depends_lib-append port:ige-mac-integration
+#         depends_run-delete port:devhelp
+#}
 
 post-activate {
         system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
