glade3-devel: update to version 3.7.1, incorporate recent glade3 changes (r72803), add notes re dependents, closes #27015.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72805 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/glade3-devel/Portfile
+++ b/dports/devel/glade3-devel/Portfile
@@ -4,46 +4,75 @@
 PortSystem 1.0
 
 name            glade3-devel
-version         3.5.7
+conflicts       glade3
+version         3.7.1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Glade is a free user interface builder for GTK+ and GNOME.
 long_description    Glade is a free user interface builder for GTK+ \
                     and GNOME. This is the most recent unstable development \
-                    release with preliminary support for GtkBuilder.
+                    release.
 maintainers     devans
 categories      devel gnome
 platforms       darwin
 homepage        http://glade.gnome.org/
 master_sites    gnome:sources/glade3/${branch}/
 distname        glade3-${version}
+
 use_bzip2       yes
-checksums       md5     381e290d4a6ae7d6a41fe16b06f15bb3 \
-                sha1    2e2c6fcef18ed9a0e6be694cf98aa871dc8fd62f \
-                rmd160  4371ee091b1ead10846765e3d39c78ad4d32f84f
+
+checksums       md5     35dca20dd51aa1a1fd461d723abba95b \
+                sha1    eda613fa67c930818080cb96fb25d1f28de66514 \
+                rmd160  28d007c5d47feb665d412d1914cd504bde3960cd
+
+depends_skip_archcheck devhelp
 
 depends_build   port:pkgconfig \
-                port:gettext \
+                port:intltool \
+                port:gnome-doc-utils \
+                port:gtk-doc
 
-depends_lib     port:gtk2 \
-                port:libiconv \
-                port:libgnomeui \
-                port:py25-gtk \
+depends_lib     port:py26-gtk \
                 port:libxml2 \
-                port:rarian
+                port:libgnomeui
 
 depends_run     port:hicolor-icon-theme \
                 port:devhelp
 
+patchfiles      patch-configure.diff
+
 configure.args  --disable-scrollkeeper
 
-post-activate   {
-        system "scrollkeeper-update"
-}
+set python_prefix         ${frameworks_dir}/Python.framework/Versions/2.6
+configure.python          ${prefix}/bin/python2.6
+configure.pkg_config_path ${python_prefix}/lib/pkgconfig
 
 variant disable_gnome description {Disable support for GNOME UI widgets} {
         configure.args-append --disable-gnome
         depends_lib-delete port:libgnomeui
 }
+
+#
+# ige-mac-integration is broken
+#
+# disable quartz variant until this is resolved
+#
+
+#variant quartz {
+#         depends_lib-append port:ige-mac-integration
+#         depends_run-delete port:devhelp
+#}
+
+post-activate {
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
+}
+
+notes "
+    This port increments libgladeui-1.9.dylib to libgladeui-1.10.dylib.
+    Please rebuild the following dependent ports if installed:
+        
+        sudo port -n upgrade --force anjuta
+        sudo port -n upgrade --force gnome-media
+"
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/glade3/${branch}/
