--- a/dports/gnome/gnome-media/Portfile
+++ b/dports/gnome/gnome-media/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 
 name            gnome-media
 version         2.30.0
-revision        2
+revision        3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A collection of utilities for simple multimedia handling.
 long_description	\
@@ -27,10 +27,21 @@ use_bzip2       yes
 depends_build	port:pkgconfig \
                 port:gnome-doc-utils
 
+#
+# dependency on libgladeui-1.0 is required to ensure
+# that port builds consistently
+# if present glade3 ui profiles are installed
+# which allows editing of .ui files in glade3
+# if not they are not
+# no way to turn this behavior off in configure
+# path dependency allows either glade3 or glade3-devel to be used
+#
+
 depends_lib     port:libcanberra \
                 port:libunique \
                 port:gconf \
-                port:gst-plugins-base
+                port:gst-plugins-base \
+                path:lib/pkgconfig/gladeui-1.0.pc:glade3
 
 configure.args  --disable-schemas-install \
                 --disable-scrollkeeper \
