anjuta: change dependency on glade3 to path dependency that can be satisfied by either glade3 or glade3-devel, both now build +universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72808 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/anjuta/Portfile
+++ b/dports/gnome/anjuta/Portfile
@@ -40,7 +40,6 @@ configure.args  --enable-static \
                 --disable-plugin-subversion
 
 # devhelp -> webkit-gtk is not universal
-# glade3 -> devhelp -> webkit-gtk is not universal
 # anjuta is not universal
 
 universal_variant no
@@ -52,7 +51,7 @@ variant devhelp description {Enable devhelp plugin support} {
 
 variant glade description {Enable glade plugin support} {
                 configure.args-delete   --disable-plugin-glade
-                depends_lib-append      port:glade3
+                depends_lib-append      path:lib/pkgconfig/gladeui-1.0.pc:glade3
 }
 
 variant sourceview description {Enable gtksourceview editor plugin support instead of scintilla} {
