--- a/dports/devel/subversion-javahlbindings/Portfile
+++ b/dports/devel/subversion-javahlbindings/Portfile
@@ -72,6 +72,20 @@ post-configure {	reinplace "s|need_relink=yes|need_relink=no|g" \
 				${worksrcpath}/libtool
 			}
 
+platform darwin  10	{	pre-fetch {
+					if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"]} {
+						return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package:\nhttp://adcdownload.apple.com/Java/java_for_mac_os_x_10.6_update_3_developer_package/javadeveloper_10.6_10m3261.dmg\n********************"
+					}
+				}
+			}
+
+platform darwin 9	{	pre-fetch {
+					if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"]} {
+                                                return -code error "\n********************\n${name} requires the Java for Mac OS X Developer Package from Apple.\nPlease download and install this package:\nhttp://adcdownload.apple.com/Java/java_for_mac_os_x_10.5_update_8_developer_package/javadeveloper_10.5_9m3263.dmg\n********************"
+					}
+				}
+			}
+
 variant no_bdb description {Build without support for BerkeleyDB repositories} {
 			depends_lib-delete	port:db46 port:py-bsddb
 			configure.args-delete	--with-berkeley-db=:${prefix}/include/db46:${prefix}/lib/db46:db-4.6
