--- a/dports/graphics/libopenraw/Portfile
+++ b/dports/graphics/libopenraw/Portfile
@@ -5,7 +5,7 @@ PortSystem      1.0
 
 name            libopenraw
 version         0.0.8
-revision        2
+revision        3
 categories      graphics
 maintainers     devans openmaintainer
 platforms       darwin
@@ -27,7 +27,8 @@ checksums       md5     fc26f146586a4b601326130bce6ffd88 \
                 sha1    6eb19679f3b5cdc566a4caa459811121a78ac0d9 \
                 rmd160  ae653949812c0b248515837d08e0dd8f28a4e5d1
 
-patchfiles      patch-Makefile.in.diff
+patchfiles      patch-Makefile.in.diff \
+                patch-configure.diff
 
 depends_build   port:pkgconfig
 
@@ -39,6 +40,13 @@ configure.args  --with-boost=${prefix}
 variant no_gnome description {Build without GNOME/GTK2 support}  {
     depends_lib-delete port:gtk2
     configure.args-append  --disable-gnome
+}
+
+post-activate {
+    if {![variant_isset no_gnome]} {
+        ui_debug "Updating gdk-pixbuf.loaders..."
+        system "${prefix}/bin/gdk-pixbuf-query-loaders --update-cache"
+    }
 }
 
 livecheck.type  regex
