--- a/dports/graphics/librsvg/Portfile
+++ b/dports/graphics/librsvg/Portfile
@@ -65,7 +65,7 @@ post-destroot {
 
 post-activate {
     ui_debug "Updating gdk-pixbuf.loaders..."
-    system "gdk-pixbuf-query-loaders --update-cache"
+    system "${prefix}/bin/gdk-pixbuf-query-loaders --update-cache"
 }
 
 livecheck.type  regex
